# Arcade

./: .gitignore  CMakeLists.txt  README.md  add_game.sh  add_lib.sh  arcade.pc.in  build.sh  clean.sh
compile.test/game/: Makefile
compile.test/game/include/: IGameModule.hpp
compile.test/game/include/games/: nibbler_game.hpp
compile.test/game/src/: GameObject.cpp
compile.test/lib/: Makefile
compile.test/lib/include/: GameObject.hpp
compile.test/lib/include/libs/: sfml.hpp
compile.test/lib/src/: lib.cpp
include/: DLLoader.hpp  IGraphicalLibrary.hpp  arcade.hpp
include/core/: Core.hpp  Stopwatch.hpp
include/games/: centipede.hpp  pong_game.hpp  qix_game.hpp  test_game.hpp
include/libs/: NCurses.hpp  Qix.hpp  nibbler.hpp  pong.hpp  sdl2.hpp
include/menu/: Field.hpp  IMenu.hpp  Line.hpp  Menu.hpp  Table.hpp
src/: DLLoader.cpp  main.cpp
src/core/: Core.cpp  Stopwatch.cpp  core_init.cpp  core_scores.cpp
src/games/: centipede.cpp
src/games/Qix/: qix_game.cpp
src/games/nibbler/: nibbler_game.cpp
src/games/pong/: pong_game.cpp
src/games/test/: test_game.cpp
src/libs/ncurses/: draw_functions.cpp  lib.cpp
src/libs/sdl2/: lib.cpp
src/menu/: Field.cpp  Line.cpp  Menu.cpp  Table.cpp  draw_menu.cpp  handle_menu_event.cpp
